3.素材管理视频上传，大小，时长，整理管理模块JS文件

--- a/data/view/templates/operateModal.html
+++ b/data/view/templates/operateModal.html
@@ -31,7 +31,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">修改展区</h4>
+                    <h4 class="modal-title">修改</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
