4.内容及详情，修改代码以适合打包和ubuntu环境

--- a/data/view/web/content.html
+++ b/data/view/web/content.html
@@ -36,7 +36,7 @@
                 <div class="card-header p-0 border-bottom-0">
                     <ul class="nav nav-tabs" id="custom-tabs-four-tab" role="tablist">
                         <li class="pt-2 px-3">
-                            <div class="input-group">
+                            <div class="input-group" style="width:200px">
                                 <select class="form-control select2" style="flex:1 1 0%">
                                     <option selected="selected">展区1</option>
                                     <option>展区2</option>
