--- a/data/view/templates/layout.html
+++ b/data/view/templates/layout.html
@@ -201,12 +201,15 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1 style="font-size: 18px">{{ pathsName[pathsName | length() - 1] if not catalog else catalog }}</h1>
+                        <h1 style="font-size: 18px">
+                            {{ pathsName[pathsName | length() - 1] if not detail else detail }}
+                        </h1>
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
                             {% for pName in pathsName %}
-                                <li class="breadcrumb-item"><a href="#">{{ pName }}</a></li>
+                                <li class="breadcrumb-item"><a href="#">{{ pName }}</a>
+                                </li>
                             {% endfor %}
                             {#                            <li class="breadcrumb-item active">{{ request.app["pathsName"] }}</li>#}
                         </ol>
