--- a/data/view/web/dev/lamp.html
+++ b/data/view/web/dev/lamp.html
@@ -119,9 +119,15 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">延迟：</label>
+                    <label class="col-sm-2 col-form-label">开延迟：</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" placeholder="请输入" value="" name="delay">
+                        <input type="text" class="form-control" placeholder="请输入" value="" name="delay_start">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">关延迟：</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" placeholder="请输入" value="" name="delay_end">
                     </div>
                 </div>
                 <div class="form-group row">
@@ -197,7 +203,8 @@
             {name: "name", type: "text", width: 160, align: "center", title: "名称"},
             {name: "type", type: "text", width: 80, align: "center", title: "灯光0/设备1"},
             {name: "display", type: "text", width: 80, align: "center", title: "隐藏0/显示1"},
-            {name: "delay", type: "number", width: 50, align: "center", title: "延迟", visible: false},
+            {name: "delay_start", type: "number", width: 50, align: "center", title: "开延迟", visible: false},
+            {name: "delay_end", type: "number", width: 50, align: "center", title: "关延迟", visible: false},
             {name: "style", type: "text", width: 50, align: "center", title: "样式", visible: false},
             {name: "offset_x", type: "number", width: 50, align: "center", title: "偏移X", visible: false},
             {name: "offset_y", type: "number", width: 50, align: "center", title: "偏移Y", visible: false},
