--- a/data/view/web/content/detail.html
+++ b/data/view/web/content/detail.html
@@ -309,7 +309,7 @@
                 <div class="form-group row">
                     <label class="col-sm-3 col-form-label">文字：</label>
                     <div class="col-sm-9">
-                        <textarea id="edit_detail" name="text" cols="50" rows="10"></textarea>
+                        <textarea id="{{ prefix }}edit_detail" name="text" cols="50" rows="10"></textarea>
                     </div>
                 </div>
             </div>
@@ -341,6 +341,8 @@
     <!-- Select2 -->
     <script src="{{ url_for('static',filename='plugins/select2/js/select2.full.min.js') }}"></script>
     <script src="{{ url_for('static',filename='app/detail.js') }}"></script>
+    <!-- popModal -->
+    <script src="{{ url_for('static',filename='plugins/popModal/popModal.js') }}"></script>
     <script>
 
         var video_url = {
